<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World!</string>
    <string name="ok">ok</string>
    <string name="_1">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="pound">#</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="agree_text">I have read and agree to</string>
    <string name="link_maybe"><a href="hello.com">Terms and Service</a></string>
    <string name="t_and_s"><a href="hello.com">Terms and Conditions</a></string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in"><a href="google.com">Sign in</a></string>
    <string name="x">X</string>
    <string name="app_name1">Build a Material Theme</string>
    <string name="theme_name_hint">Theme name…</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--Main-->
    <string name="tab_title_instructions">Instructions</string>
    <string name="tab_title_components">Components</string>
    <string name="tab_title_theme_summary">Theme summary</string>

    <!--Instructions-->
    <string name="instructions_how_to">Build your own custom Material Theme by remixing and styling these themeable components.\n\nModify the variables in your project\'s color.xml, type.xml and shape.xml files to see your custom styles cascade through Material Components for Android.</string>
    <string name="instructions_how_to_title">How to use theme builder</string>
    <string name="instructions_options_title">Theme builder options</string>
    <string name="instructions_enable_dark_title">Enable dark theme</string>

    <!--Component-->
    <string name="text_headline_6">Headline 6</string>
    <string name="text_body_2">Body 2</string>
    <string name="text_button">Button</string>
    <string name="text_overline">Overline</string>

    <string name="button_label_title">Button</string>
    <string name="button_left_button_label">Left</string>
    <string name="button_center_button_label">Center</string>
    <string name="button_right_button_label">Right</string>

    <string name="fab_label_title">FAB</string>

    <string name="card_label_title">Card</string>

    <string name="chip_label_title">Chips</string>
    <string name="chip_action_title">Action</string>
    <string name="chip_filter_title">Filter</string>
    <string name="chip_choice_title">Choice</string>
    <string name="chip_entry_title">Entry</string>

    <string name="top_app_bar_label_title">Top app bar</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Search</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>

    <string name="drawer_label_title">Drawer</string>

    <string name="text_field_label_title" description="Label text for a text field [CHAR LIMIT=50]">Text field</string>
    <string name="text_field_hint_text">Label</string>

    <string name="bottom_nav_label_title">Bottom navigation</string>
    <string name="bottom_nav_favorites_title">Favorites</string>
    <string name="bottom_nav_music_title">Music</string>
    <string name="bottom_nav_places_title">Places</string>
    <string name="bottom_nav_news_title">News</string>

    <string name="switch_label_title">Switch</string>

    <string name="radio_button_label_title">Radio button</string>

    <string name="checkbox_label_title">Checkbox</string>

    <string name="bottom_app_bar_label_title">Bottom app bar</string>

    <string name="tabs_label_title">Tabs</string>

    <string name="snackbar_label_title">Snackbar</string>
    <string name="snackbar_message_text">Marked as favorite</string>
    <string name="snackbar_action_text">Action</string>

    <string name="dialog_label_title">Dialog</string>
    <string name="dialog_button_label">Show dialog</string>

    <string name="bottom_sheet_label_title">Bottom sheet</string>
    <string name="bottom_sheet_button_label">Show bottom sheet</string>

    <string name="image_label_title">Image</string>

    <!--Theme Summary-->
    <string name="label_color_scheme_title">Color scheme</string>

    <string name="label_shape_system_title">Shape system</string>
    <string name="shape_appearance_small_label">S</string>
    <string name="shape_appearance_medium_label">M</string>
    <string name="shape_appearance_large_label">L</string>

    <string name="label_typography_scale_title">Typography scale</string>
    <string name="text_appearance_h1_label">H1</string>
    <string name="text_appearance_h2_label">H2</string>
    <string name="text_appearance_h3_label">H3</string>
    <string name="text_appearance_h4_label">H4</string>
    <string name="text_appearance_h5_label">H5</string>
    <string name="text_appearance_h6_label">H6</string>
    <string name="text_appearance_subtitle_1_label">Subtitle 1</string>
    <string name="text_appearance_subtitle_2_label">Subtitle 2</string>
    <string name="text_appearance_body_1_label">Body 1</string>
    <string name="text_appearance_body_2_label">Body 2</string>
    <string name="text_appearance_button_label">Button</string>
    <string name="text_appearance_caption_label">Caption</string>
    <string name="text_appearance_overline_label">Overline</string>
    <string name="result_string"></string>
    <string name="calc_str"></string>
    <string name="calculator">Calculator</string>
    <string name="percent">%</string>
    <string name="open_paren">(</string>
    <string name="close_paren">)</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="period">.</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="slash">/</string>
    <string name="c">C</string>
</resources>