<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one"
        style="@style/relative_number_buttons"
        android:layout_marginHorizontal="5dp"
        android:text="@string/slash"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two"
        style="@style/relative_number_buttons"
        android:layout_below="@+id/one"
        android:layout_marginHorizontal="5dp"
        android:text="@string/x"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three"
        style="@style/relative_number_buttons"
        android:layout_below="@+id/two"
        android:layout_marginHorizontal="5dp"
        android:text="@string/minus"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/four"
        style="@style/relative_number_buttons"
        android:layout_below="@+id/three"
        android:layout_marginHorizontal="5dp"
        android:text="@string/plus"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five"
        style="@style/relative_number_buttons"
        android:layout_below="@+id/four"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/equal"
        android:textColor="@color/black"

        />


</RelativeLayout>